fixed time series spacing issue

--- a/css/public_analytics.css
+++ b/css/public_analytics.css
@@ -267,9 +267,11 @@ section {
   #chart_ie .bar-chart .bin .bar {
     display: none; }
 
-#time_series,
-.section_subheadline {
+#time_series, .section_subheadline {
   color: #36435A; }
+
+#time_series {
+  padding: 0; }
 
 #current_visitors {
   font-weight: 600;
@@ -413,5 +415,3 @@ figure figure .bar-chart {
   margin: .5rem 0; }
   figure figure .bar-chart .bin {
     margin-bottom: .5rem; }
-
-/*# sourceMappingURL=public_analytics.css.map */
