--- a/sass/public_analytics.css.scss
+++ b/sass/public_analytics.css.scss
@@ -271,9 +271,12 @@ section {
   }
 }
 
-#time_series,
-.section_subheadline {
+#time_series, .section_subheadline {
   color: $dark_blue;
+}
+
+#time_series {
+  padding: 0;
 }
 
 #current_visitors {
